--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="direct2D.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MenuBox.cpp" />
+    <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="Renderer.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MenuBox.h" />
+    <ClInclude Include="MenuManager.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Room.h" />
