Texture class and SpriteBatch class now handle seperate source rectangles in the texture class - their location is added to the source rectangle location in the object class. If both texture and object have source rectangles, the object's width and height will take priority.

--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteBatch.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
