Title screen prototype happening! Also revamped lots of things. everything but the renderer itself takes width/height in that order. Added a math header with some lerp functions did a lot, should have committed this earlier probably

--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="MenuBox.h" />
     <ClInclude Include="MenuManager.h" />
     <ClInclude Include="Object.h" />
