--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -129,5 +129,8 @@
     <ClInclude Include="TextureManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>Essentials</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
