Room reading overhaul (plus maybe other things idk)

--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -76,6 +76,10 @@
     <ClCompile Include="TextureManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
+    <ClCompile Include="Text.cpp">
+      <Filter>Basic Types</Filter>
+    </ClCompile>
+    <ClCompile Include="FileReader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -132,5 +136,9 @@
     <ClInclude Include="Math.h">
       <Filter>Essentials</Filter>
     </ClInclude>
+    <ClInclude Include="Text.h">
+      <Filter>Basic Types</Filter>
+    </ClInclude>
+    <ClInclude Include="FileReader.h" />
   </ItemGroup>
 </Project>
