Sound system implemented and added some sound to title screen this commit has some bugs where menus are not rendered correctly

--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="directSound.cpp">
       <Filter>Sounds</Filter>
     </ClCompile>
+    <ClCompile Include="Math.cpp">
+      <Filter>Essentials</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
