--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -94,6 +94,9 @@
     <ClCompile Include="Math.cpp">
       <Filter>Essentials</Filter>
     </ClCompile>
+    <ClCompile Include="EnumParser.cpp">
+      <Filter>Essentials</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -161,6 +164,9 @@
     </ClInclude>
     <ClInclude Include="AudioPlayer.h">
       <Filter>Sounds</Filter>
+    </ClInclude>
+    <ClInclude Include="EnumParser.h">
+      <Filter>Essentials</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
