--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -82,9 +82,6 @@
     <ClCompile Include="Text.cpp">
       <Filter>Basic Types</Filter>
     </ClCompile>
-    <ClCompile Include="SoundManager.cpp">
-      <Filter>Sounds</Filter>
-    </ClCompile>
     <ClCompile Include="FileReader.cpp">
       <Filter>Essentials</Filter>
     </ClCompile>
@@ -93,6 +90,9 @@
     </ClCompile>
     <ClCompile Include="Math.cpp">
       <Filter>Essentials</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundManager.cpp">
+      <Filter>Managers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -153,9 +153,6 @@
     <ClInclude Include="Text.h">
       <Filter>Basic Types</Filter>
     </ClInclude>
-    <ClInclude Include="SoundManager.h">
-      <Filter>Sounds</Filter>
-    </ClInclude>
     <ClInclude Include="FileReader.h">
       <Filter>Essentials</Filter>
     </ClInclude>
@@ -164,6 +161,9 @@
     </ClInclude>
     <ClInclude Include="EnumParser.h">
       <Filter>Essentials</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundManager.h">
+      <Filter>Managers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
