--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="direct2D.cpp" />
     <ClCompile Include="directSound.cpp" />
+    <ClCompile Include="EnumParser.cpp" />
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Map.cpp" />
