--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -97,6 +97,7 @@
     <ClCompile Include="EnumParser.cpp">
       <Filter>Essentials</Filter>
     </ClCompile>
+    <ClCompile Include="DialogBox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -168,5 +169,6 @@
     <ClInclude Include="SoundManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
+    <ClInclude Include="DialogBox.h" />
   </ItemGroup>
 </Project>
