--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -155,7 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
-    <ClCompile Include="DialogBox.cpp" />
+    <ClCompile Include="DialogueBox.cpp" />
     <ClCompile Include="direct2D.cpp" />
     <ClCompile Include="directSound.cpp" />
     <ClCompile Include="EnumParser.cpp" />
@@ -184,7 +184,7 @@
     <ClInclude Include="AudioPlayer.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="defines.h" />
-    <ClInclude Include="DialogBox.h" />
+    <ClInclude Include="DialogueBox.h" />
     <ClInclude Include="EnumParser.h" />
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="InputManager.h" />
