--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -97,7 +97,9 @@
     <ClCompile Include="EnumParser.cpp">
       <Filter>Essentials</Filter>
     </ClCompile>
-    <ClCompile Include="DialogBox.cpp" />
+    <ClCompile Include="DialogueBox.cpp">
+      <Filter>Basic Types</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -169,6 +171,8 @@
     <ClInclude Include="SoundManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
-    <ClInclude Include="DialogBox.h" />
+    <ClInclude Include="DialogueBox.h">
+      <Filter>Basic Types</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
