Adding "BorderedBox.h" class as parent class for MenuBox and DialogueBox to limit on the reuse of code Changed how DialogueBox writes text so that it doesn't write part of a word on one line and then skip it to the next line halfway through

--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -100,6 +100,9 @@
     <ClCompile Include="DialogueBox.cpp">
       <Filter>Basic Types</Filter>
     </ClCompile>
+    <ClCompile Include="BorderedBox.cpp">
+      <Filter>Basic Types</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -172,6 +175,9 @@
       <Filter>Managers</Filter>
     </ClInclude>
     <ClInclude Include="DialogueBox.h">
+      <Filter>Basic Types</Filter>
+    </ClInclude>
+    <ClInclude Include="BorderedBox.h">
       <Filter>Basic Types</Filter>
     </ClInclude>
   </ItemGroup>
