--- a/Revenge/Revenge/Revenge.vcxproj.filters
+++ b/Revenge/Revenge/Revenge.vcxproj.filters
@@ -106,6 +106,15 @@
     <ClCompile Include="Text.cpp">
       <Filter>Menus</Filter>
     </ClCompile>
+    <ClCompile Include="SaveManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="ItemManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="Item.cpp">
+      <Filter>Base Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -182,6 +191,15 @@
     </ClInclude>
     <ClInclude Include="Text.h">
       <Filter>Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="SaveManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Base Classes</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
