--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -154,6 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ability.cpp" />
     <ClCompile Include="BorderedBox.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DialogueBox.cpp" />
@@ -185,6 +186,7 @@
     <ClCompile Include="TitleManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ability.h" />
     <ClInclude Include="AudioPlayer.h" />
     <ClInclude Include="BorderedBox.h" />
     <ClInclude Include="Character.h" />
