--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -157,6 +157,8 @@
     <ClCompile Include="Ability.cpp" />
     <ClCompile Include="BorderedBox.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Component.cpp" />
+    <ClCompile Include="ComponentManager.cpp" />
     <ClCompile Include="DialogueBox.cpp" />
     <ClCompile Include="direct2D.cpp" />
     <ClCompile Include="directSound.cpp" />
@@ -164,6 +166,7 @@
     <ClCompile Include="EnumParser.cpp" />
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="InteractionComponent.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemManager.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -191,12 +194,15 @@
     <ClInclude Include="AudioPlayer.h" />
     <ClInclude Include="BorderedBox.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="ComponentManager.h" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="DialogueBox.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnumParser.h" />
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="InteractionComponent.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemManager.h" />
     <ClInclude Include="Manager.h" />
